tests/dataset/tpc-ds/compiler/c/q31.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *ca_county;
  int d_year;
  double web_q1_q2_increase;
  double store_q1_q2_increase;
  double web_q2_q3_increase;
  double store_q2_q3_increase;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *ca_county;
  int d_qoy;
  int d_year;
  double ss_ext_sales_price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *ca_county;
  int d_qoy;
  int d_year;
  double ws_ext_sales_price;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *ca_county;
  int d_year;
  double web_q1_q2_increase;
  double store_q1_q2_increase;
  double web_q2_q3_increase;
  double store_q2_q3_increase;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q31_simplified_result;
static void test_TPCDS_Q31_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.ca_county = "A",
                            .d_year = 2000,
                            .web_q1_q2_increase = 1.5,
                            .store_q1_q2_increase = 1.2,
                            .web_q2_q3_increase = 1.6666666666666667,
                            .store_q2_q3_increase = 1.3333333333333333}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q31_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q31_simplified_result.len; i3++) {
      if (test_TPCDS_Q31_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ca_county = "A",
                                               .d_qoy = 1,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 100.0},
                                (store_sale_t){.ca_county = "A",
                                               .d_qoy = 2,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 120.0},
                                (store_sale_t){.ca_county = "A",
                                               .d_qoy = 3,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 160.0},
                                (store_sale_t){.ca_county = "B",
                                               .d_qoy = 1,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 80.0},
                                (store_sale_t){.ca_county = "B",
                                               .d_qoy = 2,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 90.0},
                                (store_sale_t){.ca_county = "B",
                                               .d_qoy = 3,
                                               .d_year = 2000,
                                               .ss_ext_sales_price = 100.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ca_county = "A",
                                         .d_qoy = 1,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 100.0},
                            (web_sale_t){.ca_county = "A",
                                         .d_qoy = 2,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 150.0},
                            (web_sale_t){.ca_county = "A",
                                         .d_qoy = 3,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 250.0},
                            (web_sale_t){.ca_county = "B",
                                         .d_qoy = 1,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 80.0},
                            (web_sale_t){.ca_county = "B",
                                         .d_qoy = 2,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 90.0},
                            (web_sale_t){.ca_county = "B",
                                         .d_qoy = 3,
                                         .d_year = 2000,
                                         .ws_ext_sales_price = 95.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  list_string counties = list_string_create(2);
  counties.data[0] = "A";
  counties.data[1] = "B";
  int counties = counties;
  list_int result = list_int_create(0);
  for (int tmp4 = 0; tmp4 < counties.len; tmp4++) {
    char *county = counties.data[tmp4];
    list_float tmp5 = list_float_create(store_sales_len);
    int tmp6 = 0;
    for (int tmp7 = 0; tmp7 < store_sales_len; tmp7++) {
      store_sale_t s = store_sales[tmp7];
      if (!((strcmp(s.ca_county, county) == 0) && s.d_qoy == 1)) {
        continue;
      }
      tmp5.data[tmp6] = s.ss_ext_sales_price;
      tmp6++;
    }
    tmp5.len = tmp6;
    double ss1 = _sum_float(tmp5);
    list_float tmp8 = list_float_create(store_sales_len);
    int tmp9 = 0;
    for (int tmp10 = 0; tmp10 < store_sales_len; tmp10++) {
      store_sale_t s = store_sales[tmp10];
      if (!((strcmp(s.ca_county, county) == 0) && s.d_qoy == 2)) {
        continue;
      }
      tmp8.data[tmp9] = s.ss_ext_sales_price;
      tmp9++;
    }
    tmp8.len = tmp9;
    double ss2 = _sum_float(tmp8);
    list_float tmp11 = list_float_create(store_sales_len);
    int tmp12 = 0;
    for (int tmp13 = 0; tmp13 < store_sales_len; tmp13++) {
      store_sale_t s = store_sales[tmp13];
      if (!((strcmp(s.ca_county, county) == 0) && s.d_qoy == 3)) {
        continue;
      }
      tmp11.data[tmp12] = s.ss_ext_sales_price;
      tmp12++;
    }
    tmp11.len = tmp12;
    double ss3 = _sum_float(tmp11);
    list_float tmp14 = list_float_create(web_sales_len);
    int tmp15 = 0;
    for (int tmp16 = 0; tmp16 < web_sales_len; tmp16++) {
      web_sale_t w = web_sales[tmp16];
      if (!((strcmp(w.ca_county, county) == 0) && w.d_qoy == 1)) {
        continue;
      }
      tmp14.data[tmp15] = w.ws_ext_sales_price;
      tmp15++;
    }
    tmp14.len = tmp15;
    double ws1 = _sum_float(tmp14);
    list_float tmp17 = list_float_create(web_sales_len);
    int tmp18 = 0;
    for (int tmp19 = 0; tmp19 < web_sales_len; tmp19++) {
      web_sale_t w = web_sales[tmp19];
      if (!((strcmp(w.ca_county, county) == 0) && w.d_qoy == 2)) {
        continue;
      }
      tmp17.data[tmp18] = w.ws_ext_sales_price;
      tmp18++;
    }
    tmp17.len = tmp18;
    double ws2 = _sum_float(tmp17);
    list_float tmp20 = list_float_create(web_sales_len);
    int tmp21 = 0;
    for (int tmp22 = 0; tmp22 < web_sales_len; tmp22++) {
      web_sale_t w = web_sales[tmp22];
      if (!((strcmp(w.ca_county, county) == 0) && w.d_qoy == 3)) {
        continue;
      }
      tmp20.data[tmp21] = w.ws_ext_sales_price;
      tmp21++;
    }
    tmp20.len = tmp21;
    double ws3 = _sum_float(tmp20);
    double web_g1 = ws2 / ws1;
    double store_g1 = ss2 / ss1;
    double web_g2 = ws3 / ws2;
    double store_g2 = ss3 / ss2;
    if (web_g1 > store_g1 && web_g2 > store_g2) {
      list_int tmp23 = list_int_create(0);
      int tmp24_data[1];
      list_int tmp24 = {1, tmp24_data};
      tmp24.data[0] = (tmp_item_t){.ca_county = county,
                                   .d_year = 2000,
                                   .web_q1_q2_increase = web_g1,
                                   .store_q1_q2_increase = store_g1,
                                   .web_q2_q3_increase = web_g2,
                                   .store_q2_q3_increase = store_g2};
      list_int tmp25 = concat_list_int(tmp23, tmp24);
      result = tmp25;
    }
  }
  list_int tmp26 = list_int_create(0);
  _json_list_int(tmp26);
  test_TPCDS_Q31_simplified_result = result;
  test_TPCDS_Q31_simplified();
  free(tmp5.data);
  free(tmp8.data);
  free(tmp11.data);
  free(tmp14.data);
  free(tmp17.data);
  free(tmp20.data);
  return 0;
}
